[package]
name = "autocontain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.5"
dotenv = "0.15.0"
git2 = "0.19.0"
reqwest = {version = "0.12.9", features = ["blocking", "json"]}
rusqlite = {version = "0.32.1", features = ["bundled"]}
serde_json = "1.0.132"
tree-sitter = "0.24.3"
tree-sitter-javascript = "0.23.0"
tree-sitter-python = "0.23.2"
walkdir = "2.5.0"

[build-dependencies]
cc="*"
